APP-6184 Added support for x-spryker extensions.
